--- a/examples/data/uzbl/style.css
+++ b/examples/data/uzbl/style.css
@@ -1,11 +1,11 @@
-.uzbl_highlight { background-color: yellow;}
-.uzbl_h_first   { background-color: lightgreen;}
+.reuzbl_highlight { background-color: yellow;}
+.reuzbl_h_first   { background-color: lightgreen;}
 
-.uzbl_follow    { border-style:     dotted;
+.reuzbl_follow    { border-style:     dotted;
                   border-width:     thin;
 }
 
-#uzbl_hint > div    {
+#reuzbl_hint > div    {
 	display:                        inline;
 	border:                         2px solid #4a6600;
 	background-color:               #b9ff00;
